--- a/TEP/nbproject/project.properties
+++ b/TEP/nbproject/project.properties
@@ -66,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Controller.Controller
+main.class=Run.Run
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
